# Bounce

./: .gitignore  .gitmodules  Bounce.sln  CMakeLists.txt  Fade2D.sdf  Fade2D.sln  LICENSE  README.md
Bounce/: Bounce.cpp  Bounce.h  Bounce.vcxproj  Bounce.vcxproj.filters  Object.cpp  Object.h  PlayerEntitiy.cpp  World.cpp  World.h  vec2.cpp  vec2.h  world.xml
Dependencies/WIN32/lib/: glfw3.lib
Dependencies/WIN64/lib/: glfw3.lib
Fade2D/: Entity.cpp  Entity.cpp.orig  Fade2D.cpp  Fade2D.cpp.orig  Fade2D.h  Fade2D.h.orig  Fade2D.vcxproj  Fade2D.vcxproj.filters  Fade2D.vcxproj.filters.orig  ShaderHandler.cpp  ShaderHandler.h  Texture.cpp  basic.h  fragmentShader.txt  internal.h  vertexShader.txt
Fade2D/Shaders/: vertexShader.txt
FadeTest/: FadeTest.vcxproj  main.cpp  main.cpp.orig
Resources/Textures/: Thumbs.db
dep/glfw/: CMakeLists.txt
dep/glfw/src/: CMakeLists.txt
game/bounce/: vec2.h
game/fade2d/: internal.h  resource.h
res/: world.xml
res/Shaders/: fragmentShader.txt  vertexShader.txt
src/: CMakeLists.txt
src/bounce/: Bounce.cpp  Bounce.h.in  CMakeLists.txt  Object.cpp  Object.h  PlayerEntitiy.h  World.cpp  World.h  world.xml
src/fade2d/: CMakeLists.txt  Entity.cpp  Fade2D.cpp  Fade2D.h  InputHandler.cpp  InputHandler.h  ShaderHandler.cpp  ShaderHandler.h  Texture.h  basic.h  internal.h  shaderpath.h.in
src/fade2d/include/: Fade2D.h
src/fade2d/shaders/: fragmentShader.txt
